@@ -1,3 +1,8 @@
+2018-08-16  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* riscv-tdep.c (riscv_insn::decode): Decode c.addi4spn, c.sd,
+	c.sw, c.swsp, and c.sdsp.
+
 2018-04-10  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* riscv-tdep.c (struct riscv_inferior_data): Delete.
